<resources>
    <string name="app_name">StudyOwly</string>

    <string name="quiz_chose_the_answer">Choose the correct answer!</string>
    <string name="quiz_chose_the_answers">Choose the correct answers!</string>
    <string name="check">Check</string>
    <string name="difference">What is the difference between</string>
    <string name="answer">First answer is that and that and that</string>
    <string name="theory_title">This is the title</string>
    <string name="theory_subtitle_tool">This is the subtitle</string>


    <string name="well_done">Well done!</string>
    <string name="wrong">Wrong !</string>
    <string name="try_again">Try Again!</string>
    <string name="next">Next !</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="action_settings">Settings</string>
    <string name="skip">Skip!</string>

</resources>